# FlagGG

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_shared.bat  build_static.bat  config.ini  emscripten_init.bat  emscripten_update.bat  gen_proto.bat  generate_project_asm.bat  generate_project_unix_static.sh  generate_project_windows_shared.bat  generate_project_windows_static.bat  generate_proto.bat  prepare.bat  prepare.sh
3rd/: CMakeLists.txt  README.md
3rd/HLSLcc/: CMakeLists.txt  license.txt  unity_license.json
3rd/JoltPhysics/: CMakeLists.txt
3rd/PugiXml/: CMakeLists.txt
3rd/SLikeNet/: CMakeLists.txt
3rd/SPIRV-Reflect/: CMakeLists.txt  main.cpp
3rd/STB/: stb_image_write.h
3rd/bgfx/: CMakeLists.txt
3rd/jemalloc/: CMakeLists.txt
3rd/lua/: CMakeLists.txt  loslib.c  lprefix.h  luaconf.h
3rd/mimalloc/: CMakeLists.txt
3rd/mtlpp/: CMakeLists.txt
3rd/protobuf/: CMakeLists.txt
3rd/yoga/: CMakeLists.txt
Application/: CMakeLists.txt
Application/AssetImporter/: CMakeLists.txt
Application/Client/: CMakeLists.txt
Application/CoreCLRHelper/: CMakeLists.txt  CoreCLRHelper.cpp  CoreCLRHelper.h
Application/EditableGameEntryPoint/: App.xaml  App.xaml.cs  CMakeLists.txt  EditableGameEntryPoint.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
Application/Editor/: CMakeLists.txt  CameraOperation.cpp  CameraOperation.h  EditorApplication.cpp  EditorApplication.h  EditorExport.h  Importer.cpp  Importer.h  main.cpp  main.h
Application/EditorEntryPoint/: CMakeLists.txt  main.cpp
Application/Game/: CMakeLists.txt  CameraOperation.cpp  CameraOperation.h  GameApplication.cpp  GameApplication.h  GameExport.h  main.cpp  main.h
Application/GameEntryPoint/: CMakeLists.txt  main.cpp
Application/GameLogic/: CMakeLists.txt  CameraOperation.cpp  CameraOperation.h  DemoScene.cpp  DemoScene.h  GameApplication.cpp  GameApplication.h  GameEngine.cpp  GameEngine.h  main.cpp
Application/GameLogicServer/: CMakeLists.txt  GameLogicServer.cpp  GameLogicServer.h  main.cpp
Application/LightBakeSystem/: CMakeLists.txt
Application/LuaGameEngine/: Buff.cpp  Buff.h  CMakeLists.txt  Common.cpp  Common.h  Controler.h  ControlerImpl.cpp  ControlerImpl.h  Controller.cpp  Controller.h  ControllerImpl.cpp  ControllerImpl.h  Engine.cpp  Engine.h  EngineContext.h  EngineContextObject.cpp  EngineContextObject.h  EngineImpl.cpp  EngineImpl.h  EngineObject.h  Init.cpp  Init.h  InternalEvent.h  LGEExport.h  LuaEvent.h  Movement.cpp  Movement.h  Player.cpp  Player.h  Spell.cpp  Spell.h  Unit.cpp  Unit.h
Application/Proto/: Game.proto  Map.proto
Application/Server/: CMakeLists.txt
Application/UltralightCore2/: CMakeLists.txt  RenderContext.h
Application/UltralightDemo/: CMakeLists.txt  main.cpp
Application/UltralightDemo2/: CMakeLists.txt  main.cpp
Application/WebUISystem/: CMakeLists.txt  UIView.cpp  UIView.h  WebUISystem.cpp  WebUISystem.h  WebUISystemExport.h
FlagGG/: BoostException.cpp  CMakeLists.txt  Define.h  ErrorCode.h  Export.h  FlagGG.natvis  GameEngine.cpp  GameEngine.h  Launcher.cpp  Launcher.h  Log.cpp  Log.h  ServerEngine.cpp  ServerEngine.h  main.cpp
FlagGG/Allocator/: AllocatorLJ.cpp  AllocatorLJ.h  SmartMemory.hpp
FlagGG/Animation/: AnimationAsset.cpp  AnimationAsset.h  AnimationBase.cpp  AnimationBase.h  AnimationController.cpp  AnimationController.h  AnimationLayers.cpp  AnimationLayers.h  AnimationManager.cpp  AnimationManager.h  AnimationSequence.cpp  AnimationSequence.h  AnimationState.cpp  AnimationState.h  AnimationTree.h
FlagGG/AsyncFrame/: AsyncFrame.h  ConditionQueue.hpp  ConditionVariable.cpp  ConditionVariable.h  LockQueue.hpp  Locker.cpp  Locker.h  Locker.hpp  Mutex.cpp  Mutex.h
FlagGG/CSharpExport/: CSharpExport.h  CSharpExport_Application.cpp  CSharpExport_Debug.cpp  CSharpExport_Graphics.cpp  CSharpExport_Math.cpp
FlagGG/Code/: Code.cpp  Code.h
FlagGG/Config/: AutomaticMachine.cpp  AutomaticMachine.h  LJSONAux.cpp  LJSONAux.h  LJSONFile.cpp  LJSONFile.h  LJSONParser.cpp  LJSONParser.h  LJSONValue.cpp  LJSONValue.h  parse.cpp  parse.h
FlagGG/Container/: Allocator.cpp  Allocator.h  ArrayPtr.h  Callback.h  EnumAsByte.h  FlagSet.h  ForEach.h  Hash.h  HashBase.cpp  HashBase.h  HashMap.h  HashSet.h  IoC.h  LinkedList.h  List.h  ListBase.h  LockFreeList.cpp  LockFreeList.h  Noncopyable.h  Pair.h  Ptr.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  StringHash.cpp  StringHash.h  Swap.cpp  Swap.h  ThreadSafeCounter.h  Variant.cpp  Variant.h  Vector.h  VectorBase.cpp  VectorBase.h  fixed_array.h
FlagGG/Core/: AddEvent.cpp  AddEvent.h  BaseMacro.h  BaseTypes.h  Contex.h  Context.cpp  Context.h  CryAssert.cpp  CryAssert.h  DeviceEvent.cpp  DeviceEvent.h  EngineSettings.h  EventCore.h  EventDefine.h  EventManager.h  Forwarder.h  Function.h  FunctionTraits.h  GenericPlatform.h  ILNUS.cpp  ILNUS.h  Object.cpp  Object.h  ObjectFactory.h  ObjectPool.h  Profiler.cpp  Profiler.h  RTTI.cpp  RTTI.h  Runnable.h  Subsystem.h
FlagGG/FileSystem/: Archive.cpp  Archive.h  FileHandle.h  FileHandler.h  FileManager.cpp  FileManager.h  FileSystem.h  FileSystemArchive.h  ParticleSystemComponent.h  PlatformFileInterface.h  UML.txt
FlagGG/GfxDevice/: AmbientOcclusionRendering.cpp  AmbientOcclusionRendering.h  GfxBuffer.cpp  GfxBuffer.h  GfxDevice.cpp  GfxDevice.h  GfxDeviceDefines.h  GfxDeviceSystem.cpp  GfxObject.cpp  GfxObject.h  GfxProgram.cpp  GfxProgram.h  GfxRenderSurface.cpp  GfxRenderSurface.h  GfxSampler.cpp  GfxSampler.h  GfxShader.cpp  GfxShader.h  GfxShaderResourceView.cpp  GfxShaderResourceView.h  GfxSwapChain.cpp  GfxSwapChain.h  GfxTexture.cpp  GfxTexture.h  GfxTextureUtils.cpp  GfxTextureUtils.h  VertexDescFactory.cpp  VertexDescFactory.h
FlagGG/Graphics/: AmbientOcclusionRendering.h  AmbientOcclusionRenderingSoftware.cpp  AmbientOcclusionRenderingSoftware.h  AmbientProbeBaker.cpp  AmbientProbeBaker.h  Batch.cpp  Batch.h  Batch2D.cpp  Batch2D.h  Batch3D.cpp  Batch3D.h  Camera.cpp  Camera.h  ComputePass.cpp  ComputePass.h  ConstBuffer.cpp  ConstBuffer.h  ConstantBuffer.cpp  (+82 more)
Samples/: CMakeLists.txt
(+1132 files in other folders)
