add_subdirectory (lua)
add_subdirectory (PugiXml)
add_subdirectory (Assimp)
add_subdirectory (SLikeNet)
add_subdirectory (protobuf)
add_subdirectory (HLSLcc)
add_subdirectory (mtlpp)
add_subdirectory (mimalloc)
add_subdirectory (JoltPhysics)
add_subdirectory (SPIRV-Reflect)
add_subdirectory (bgfx)
add_subdirectory (yoga)
