add_subdirectory (lua)
add_subdirectory (PugiXml)
if (WIN32)
    add_subdirectory (Assimp)
endif ()
add_subdirectory (SLikeNet)
add_subdirectory (protobuf)
add_subdirectory (HLSLcc)
add_subdirectory (mtlpp)
add_subdirectory (mimalloc)
if (FLAGGG_JOLT)
    add_subdirectory (JoltPhysics)
endif ()
add_subdirectory (SPIRV-Reflect)
add_subdirectory (bgfx)
add_subdirectory (yoga)
