include (${CMAKE_CURRENT_SOURCE_DIR}/../CMake/ThirdParty.cmake)
add_subdirectory (Editor)
add_subdirectory (EditorEntryPoint)
add_subdirectory (GameLogicServer)
add_subdirectory (Game)
add_subdirectory (GameEntryPoint)
add_subdirectory (EditableGameEntryPoint)
add_subdirectory (LuaGameEngine)
add_subdirectory (AssetImporter)
add_subdirectory (CoreCLRHelper)
