include (${CMAKE_CURRENT_SOURCE_DIR}/../CMake/ThirdParty.cmake)
add_subdirectory (Editor)
add_subdirectory (EditorEntryPoint)
add_subdirectory (GameLogicServer)
add_subdirectory (Game)
add_subdirectory (GameEntryPoint)
if (WIN32)
    add_subdirectory (EditableGameEntryPoint)
endif ()
add_subdirectory (LuaGameEngine)
add_subdirectory (AssetImporter)
if (WIN32)
    add_subdirectory (CoreCLRHelper)
    add_subdirectory (UltralightCore2)
    add_subdirectory (UltralightDemo)
    add_subdirectory (UltralightDemo2)
    add_subdirectory (WebUISystem)
endif ()
